--- a/.github/workflows/no-response.yml
+++ b/.github/workflows/no-response.yml
@@ -1,26 +1,14 @@
-name: No Response
-
-# Both `issue_comment` and `scheduled` event types are required for this Action
-# to work properly.
-on:
-  issue_comment:
-    types: [created]
-  schedule:
-    # Schedule for five minutes after the hour, every hour
-    - cron: '5 * * * *'
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Release version'
-        required: false
-    
-permissions:
-  issues: write
-
 jobs:
   noResponse:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - uses: lee-dohm/no-response@v0.5.0
-        with:
-          token: ${{ github.token }}
+    - continue-on-error: true
+      uses: lee-dohm/no-response@v0.5.0
+      with:
+        token: ${{ github.token }}
+name: No Response
+on:
+  repository_dispatch:
+    types: trigger-ga___no-response.yml
+permissions:
+  issues: write
