--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,79 +1,58 @@
-name: Release
-
-on:
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Release version'
-        required: true
-  push:
-    tags:
-      - 'v*.*'
-
 jobs:
   greet:
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
     steps:
-    - name: Checkout
+    - continue-on-error: true
+      name: Checkout
       uses: actions/checkout@v2
-
-    - name: Set LD_VERSION
+    - continue-on-error: true
       if: ${{ github.event_name == 'push'}}
+      name: Set LD_VERSION
       run: echo "LD_VERSION=${GITHUB_REF#refs/*/v}" >> $GITHUB_ENV
-    - name: Set LD_VERSION
+    - continue-on-error: true
       if: ${{ github.event_name == 'workflow_dispatch'}}
+      name: Set LD_VERSION
       run: echo "LD_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
-    - name: Set PUBLISH_TOKEN
+    - continue-on-error: true
+      name: Set PUBLISH_TOKEN
       run: echo "PUBLISH_TOKEN=${{ secrets.PUBLISH_TOKEN }}" >> $GITHUB_ENV
-
-    - name: Set up JDK 11
+    - continue-on-error: true
+      name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
         java-version: 11
-
-    - name: Grant execute permission for gradlew
+    - continue-on-error: true
+      name: Grant execute permission for gradlew
       run: chmod +x gradlew
-
-    - name: Build the plugin
-      run:  ./gradlew publishPlugin
+    - continue-on-error: true
       env:
         LD_VERSION: ${{ env.LD_VERSION }}
         PUBLISH_TOKEN: ${{ env.PUBLISH_TOKEN }}
-
-        #     - name: Verify plugin
-        #       id: verify
-        #       uses: ChrisCarini/intellij-platform-plugin-verifier-action@v1.0.5
-        #       with:
-        #         failure-levels: |
-        #           INVALID_PLUGIN
-        #         ide-versions: |
-        #           ideaIC:2020.3
-        #           ideaIC:LATEST-EAP-SNAPSHOT
-
-        #     - name: Print verify contents
-        #       run: |
-        #         echo "The log file path is: ${{steps.verify.outputs.verification-output-log-filename}}" ;
-        #         cat ${{steps.verify.outputs.verification-output-log-filename}}
-
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
+      name: Build the plugin
+      run: ./gradlew publishPlugin
+    - continue-on-error: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      id: create_release
+      name: Create Release
+      uses: actions/create-release@v1
       with:
-        tag_name: v${{ env.LD_VERSION }}
-        release_name: v${{ env.LD_VERSION }}
         draft: true
         prerelease: false
-
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
+        release_name: v${{ env.LD_VERSION }}
+        tag_name: v${{ env.LD_VERSION }}
+    - continue-on-error: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      id: upload-release-asset
+      name: Upload Release Asset
+      uses: actions/upload-release-asset@v1
       with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./build/distributions/leetcode-editor-${{ env.LD_VERSION }}.zip
-        asset_name: leetcode-editor-${{ env.LD_VERSION }}.zip
         asset_content_type: application/zip
+        asset_name: leetcode-editor-${{ env.LD_VERSION }}.zip
+        asset_path: ./build/distributions/leetcode-editor-${{ env.LD_VERSION }}.zip
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+name: Release
+on:
+  repository_dispatch:
+    types: trigger-ga___release.yml
